--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -200,7 +200,7 @@ Freescale formatet blev udelukket da opsætningen af denne var mere kompliceret 
     \hline
      \\ \\ \\ \\
     PWM duty cycle \\
-    (11 bits) \\ \\ \\ \\ \\ \\
+    (11 bits) \\ \\ \\ \\ \\
     \hline
   \end{tabular}
 }
@@ -215,7 +215,7 @@ Freescale formatet blev udelukket da opsætningen af denne var mere kompliceret 
     \hline
      \\ \\ \\ \\
     PWM duty cycle \\
-    (11 bits) \\ \\ \\ \\ \\ \\
+    (11 bits) \\ \\ \\ \\ \\
     \hline
   \end{tabular}
 }
