--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -35,6 +35,7 @@ Det er derfor valgt at repræsentere PWM dutycycle ved 11 bit.
 Ved 11 bits opløsning på PWM og brug af BASYS boardets interne clock på 50 [MHz] bliver PWM frekvensen passende høj:
 \todo[inline, author=Michael]{Find et argument for den valgte opløsning.}
 \todo[inline, color = pink, author = Mikkel]{Er ovenstående godt nok? :) }
+\todo[inline, author=Michael]{Ja! }
 
 \begin{equation}
   \frac{50 \text{ [MHz]}}{2^{11}} = 24.41 \text{ [kHz]}
