--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -2,30 +2,9 @@
 
 \subsection*{Projekt opdeling}
 \begin{itemize}
-\item [Part I:] Application
-\item [Part II:] Application
-\item [Part I]: Application
-\item [Part I]: Application
-\item [Part I]: Application
-\item [Part I]: Application
-
-
-
+\item Part I Applikation\\
+Applikationsdelen start med problemformuleringen efterflugt at kravsspecifikation og sidst afsluttes med et projektoverblik.
+\item Part II  System identifikation\\
+Applikationsdelen start med problemformuleringen efterflugt at kravsspecifikation og sidst afsluttes med et projektoverblik.
 \end{itemize}
 
-\subsection*{CDROM indhold}
-\begin{itemize}
-\item 
-\end{itemize}
-
-
-
-\subsection*{Forkortelser}
-ES = English Skeet \\
-PTS = Pan and Tilt System
-
-
-
-\newpage
-\subsection*{Tekst som mangler at blive skrevet}
-\listoftodos
