opdateret task diagram og beskrevet tasks

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -70,7 +70,7 @@ frame=false,
 numbers=left,
 numberstyle=\tiny,
 numbersep=5pt,
-breaklines=true,
+breaklines=true,preamble
 showstringspaces=false,
 basicstyle=\ttfamily,
 % identifierstyle=\color{magenta},
