--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -1,6 +1,8 @@
 \input{./content/preamble}
 \input{./content/task_diagram_styles_v2}
 \input{./content/controller_diagram_styles_v1}
+%lstlistings distance to text
+\lstset{aboveskip=0pt,belowskip=-10pt} %is this too agressive?
 \begin{document}
 \pagenumbering{Roman}
 \include{./content/forside}
