Ordnet sidetal, indsat tomme sidder.. Forsiden skal printes for sig selv, så burde det virker..

--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -1,3 +1,5 @@
+%\thispagestyle{empty}
+\cleardoublepage
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
@@ -6,5 +8,3 @@
 \input{./content/problemformulering}
 \include{./content/kravspecifikation}
 \include{./content/projekt_overblik}
-
-
