--- a/Rapport/content/forside.tex
+++ b/Rapport/content/forside.tex
@@ -1,4 +1,4 @@
-\title{Styring og regulering af et Pan og Tilt system \\Robotteknologi 4. semesterprojekt}
+\title{Styring og regulering af et Pan \& Tilt system \\Robotteknologi 4. semesterprojekt}
 \author{Gruppe 2 \\ Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
 \date{Maj 2014}
 \begin{figure}
