--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -12,9 +12,10 @@
 \include{./content/indholdsfortegnelse}
 \pagestyle{fancy}
 \fancyfoot{}
-\fancyfoot[LE,RO]{\thepage}
-\fancyfoot[LO,CE]{}
-\fancyfoot[CO,RE]{}
+\fancyfoot[LE,RO]{}
+\fancyfoot[LO,RE]{}
+\fancyfoot[LO,RE]{}
+\fancyfoot[LO,RE]{\thepage}
 
 % Disable indentation
 \setlength{\parindent}{0pt}
