\itemsep1pt indsat i listevisning

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -17,6 +17,7 @@ kan derfor styre motorernes hastighed ved at vælge PWM-signalernes duty cycles.
 I afsnit \ref{sec:kravspecifikation} opstilles kravene til systemets respons.
 Disse er for en 1-radian reference opsummeret nedenfor.
 \begin{itemize}
+\itemsep1pt
 \item \(t_{s} \leq 0,557 \mathrm{\left[s\right]}\) (Settling Time)
 \item \(SSE \leq 1,78 \%\) (Steady State Tracking Error)
 \item \(P.O. \leq 34 \%\) (Overshoot i procent)
