--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -9,7 +9,7 @@
 %FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
 
 %Mikkels:
-
+\todo[inline, color = pink, author = Mikkel]{Har prøvet at lave det om. Måske er det ikke dette vi vil have. Anders' version er blot udkommenteret.}
 Af projektoplægget er givet, at projektet skal opdeles som vist på 
 figur \ref{fig:overview_openloop_PTS}. 
 Det ligger altså udenfor dette projekt at bestemme den overordnede opdeling.
