--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -8,6 +8,7 @@ for på den måde at sammenstykke en model af hele systemet.
 Det vælges hovedsageligt at benytte den sidstnævnte metode til bestemmelsen af en simplificeret
 model af Pan \& Tilt-systemet af følgende årsager:
 \begin{itemize}
+\itemsep1pt
 \item Matematiske modeller for systemets enkelte elementer findes i litteraturen.
 \item Flere af de matematiske modeller er lineære og simple.
 \item De matematiske modeller giver indsigt i den involverede fysik og giver mulighed
