--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -185,7 +185,7 @@ Freescale formatet blev udelukket da opsætningen af denne var mere kompliceret 
 \todo[author=Åse,inline]{Skriv en figur tekst senere} 
 
 \todo[inline, author=Michael]{Alternativ version. Please vote :)}
-
+\todo[inline, color = pink, author = Mikkel]{Stemmer på alternativ version ;)}
 \begin{figure}[h!]
 \centering
 \subfloat[Mikrocontroller til FPGA.\label{fig:spi_to_fpga}]{%
