--- a/Rapport/content/appen.tex
+++ b/Rapport/content/appen.tex
@@ -6,4 +6,5 @@
 \input{./content/problemequation}
 \include{./content/app_DCmotor}
 \include{./content/app_panandtiltparameter}
+\include{./content/app_FPGA}
 \include{./content/Serial_Peripheral_Interface}
