Tilføjet lille indledning til applikation og systemidentifikation

--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,8 +3,9 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
-
+I denne del af rapporten beskrives i hvilken sammenhæng pan & tilt systemet 
+ønskes brugt. Situationen analyseres og krav til systemet fastlægges. Sidst 
+gives et overblik over det samlede projekt samt opdelingen af opgaver.
 \input{./content/problemformulering}
 \include{./content/kravspecifikation}
 \include{./content/projekt_overblik}
