--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,5 +1,9 @@
 \part{System identifikation}
-\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
+Denne del af rapporten beskriver hvordan systemet identificeres ved at finde en 
+matematisk model for systemet. Dernæst findes de krav, det kræver at styre et 
+sådant system. Der beskrives hvilken koordinattransformation der er behov for.
+Ydermere beskrives hvilken proces, der benyttes til at designe regulatoren samt 
+hvordan den matematiske model for systemet diskretiseres.
 
 \input{./content/PTS}
 \include{./content/koordinattransformation}
