--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,7 +3,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
+Nedenstående sektioner gennemgår de grundlæggende udgangspunkter for projektet.  
 
 \input{./content/problemformulering}
 \include{./content/kravspecifikation}
