--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -9,12 +9,12 @@
 %FPGA'en og mikrocontrolleren kommunikere sammen vha. SPI. FPGA'en genererer to PWM-signaler, som driver hhv. H-broen og motor for pan og H-broen og motor for tilt. DC motorene sender deres encoder feedback til FPGA'en.
 
 %Mikkels:
-\todo[inline, color = pink, author = Mikkel]{Har prøvet at lave det om. Måske er det ikke dette vi vil have. Anders' version er blot udkommenteret.}
-Af projektoplægget er givet, at projektet skal opdeles som vist på 
+Som fremgår af projektoplægget skal projektet opdeles som vist på 
 figur \ref{fig:overview_openloop_PTS}. 
 Det ligger altså udenfor dette projekt at bestemme den overordnede opdeling.
 Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{itemize}
+\itemsep1pt
   \item Regulatorerne skal implementeres på én microprocessor.
   \item Der skal benyttes SPI kommunikationen imellem microprocessoren og FPGA’en.
   \item FPGA’en skal styre PWM signalerne til motorerne.
@@ -31,5 +31,3 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
-
-\todo[inline, author=Michael]{Vi skal beslutte hvad vi vil med dette afsnit: Læseguide? Blokopdeling? Indledning? Krav til enkelte dele? Overblik over valgt løsning? \\ Det afhænger vel af hvilken rapportstruktur vi vælger.}
