--- a/Rapport/content/evaluering.tex
+++ b/Rapport/content/evaluering.tex
@@ -1,5 +1,5 @@
 \part{Evaluering}
-\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
+I denne del opsummeres projektarbejdet gennem diskussion og konklusion. 
 
 \input{./content/diskussion}
 \include{./content/konklusion}
