--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -45,8 +45,7 @@ Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_pl
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
-\todo[inline, color = pink,author = Mikkel]{Er det ikke ligegyldigt at vi kan affyre to skud, hvis kun ét er tilladt?}
-Det anslås, at man kan nå at affyre to skud mellem tidspunktet,
+Det anslås, at man kan nå at affyre et skud mellem tidspunktet,
 hvor lerduen når toppunktet og SB, ligning \ref{eq:ks:nedslagstid}.
 I dette tidsrum skal Pan \& Tilt-systemet sigte på lerduen så geværet kan ramme.
 Der er altså et tidsmæssigt krav til reguleringen om en Settling Time for systemet,
