--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,4 +1,3 @@
 \part{Regulering}
-\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
-
+I denne del optimeringes koefficienterne i reguleringssløjferne for PTS.
 \input{./content/PID_optimering}
