--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -45,7 +45,7 @@
 \usepackage{pgfplots}
 
 \pgfplotsset{compat=1.8} % Burde være understøttet på alle maskiner.
-\usepackage[europeanvoltages, europeancurrents, europeanresistors, americaninductors, smartlabels]{circuitikz}
+\usepackage[americanvoltages, americancurrents, americanresistors, americaninductors, smartlabels]{circuitikz}
 \usepackage{graphicx} % bruges til MATLAB figurer samt formatet .eps
 \usepackage{epstopdf} % bruges til automatisk konvertering af .eps-filer til pdf; Ellers kan man ikke kompilere med pdfLaTeX.
 \usepackage{mathtools}
